gcc/testsuite/rust/compile/feature.rs
#![feature(AA)] //{ dg-error "unknown feature 'AA'" }
                   

fn main(){}